--- a/style.css
+++ b/style.css
@@ -1,8 +1,21 @@
 .promotion-hero {
+  display: flex;
+  flex-flow: row;
   width: 100%;
+  justify-content: space-between;
 }
-.promotion-hero__img {
-  width: 100%;
+.promotion-hero__item {
+  background-color: #ffa500;
+  text-align: center;
+  font-size: 4em;
+  padding: 40px;
+}
+.promotion-hero__item--primary {
+  text-align: center;
+  font-size: 4em;
+  padding: 40px 0;
+  flex: 1;
+  background-color: #ffa500;
 }
 .promotion {
   display: flex;
@@ -134,6 +147,9 @@
   background-color: #ddd;
 }
 @media only screen and (max-width: 600px) and (min-width: 320px) {
+  .promotion-hero__item {
+    display: none;
+  }
   .promotion {
     flex-flow: column nowrap;
     margin: 20px;
